@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.5 2020/03/29 02:13:32 manu Exp $
+$NetBSD: distinfo,v 1.6 2020/04/16 12:42:28 manu Exp $
 
-SHA1 (libp11-0.4.4.tar.gz) = eff34266f77e8758b2c6a33588fe37a70059fc11
-RMD160 (libp11-0.4.4.tar.gz) = 28e5d6c0001a24695d37d3e905617ec3d6dac064
-SHA512 (libp11-0.4.4.tar.gz) = d39976cf27655a01331a08fdcd28c9d00de586c6918bec9e43228da4668132e637a3b0069d7478618ae63aeaa6bdb9f40b36e6fdac2934d42ea12c7e9b5eec5b
-Size (libp11-0.4.4.tar.gz) = 108307 bytes
+SHA1 (libp11-0.4.10.tar.gz) = 4c7d187e22b85947e943db443feab9a852cc1585
+RMD160 (libp11-0.4.10.tar.gz) = 62ab5cc2cb0b943d91c7daa3e24c82bc17105858
+SHA512 (libp11-0.4.10.tar.gz) = 7f1ce0a6057048787ad604984366c681785bbc10d26fb5a4ba1081780080c3f1b9711796902e05ebe6562251812c321e425af1cf8609ec36f15e954b7fe131e7
+Size (libp11-0.4.10.tar.gz) = 127101 bytes
 SHA1 (patch-Makefile.am) = c1ef488d455013841d973462fb67a64baf4db452
